# beerlabel

./: CMakeLists.txt  README.md
src/: LabelCanvas.cpp  LabelCanvas.h  LabelModel.cpp  LabelModel.h  LabelPrintout.cpp  LabelPrintout.h  MainFrame.cpp  MainFrame.h  SvgIO.cpp  SvgIO.h  main.cpp
